--- a/assets/scss/elements/_dark-mode.scss
+++ b/assets/scss/elements/_dark-mode.scss
@@ -363,7 +363,7 @@ body.dark-mode {
 	}
 
 	.testimonials-section {
-		background-color: $dark-bg-secondary;
+		background-color: transparent;
 
 		.section-title {
 			color: $dark-text;
